Fixed wireframe mode for blurry elements, added partial undo functionality
git-svn-id: http://svg-edit.googlecode.com/svn/trunk@1509 eee81c28-f429-11dd-99c0-75d572ba1ddd

--- a/editor/svg-editor.css
+++ b/editor/svg-editor.css
@@ -398,6 +398,7 @@
 	opacity: 1;
 	pointer-events: stroke;
 	vector-effect: non-scaling-stroke;
+	filter: none;
 }
 
 #workarea.wireframe #svgcontent text {
